--- a/config/emacs/config.org
+++ b/config/emacs/config.org
@@ -13,14 +13,14 @@
         user-mail-address "nuxshed@gmail.com")
 #+end_src
 
-  change the defaults because some of them suck
+Change the defaults because some of them suck
 #+begin_src elisp
   (setq-default require-final-newline t
                 vc-follow-symlinks)
 
   (setq undo-limit 80000000            ; moar undo
-      auto-save-default t            ; who knows what could happen?
-      truncate-string-ellipsis "…")   ; prettier ellipsis
+      auto-save-default t              ; who knows what could happen?
+      truncate-string-ellipsis "…")    ; prettier ellipsis
 
   ;; scrolling related settings
   (setq scroll-margin 1
@@ -42,13 +42,13 @@ UI debloating
   (scroll-bar-mode -1)        ; Disable the scrollbar
 #+end_src
 
-set custom file and load it
+Set custom file and load it
 #+begin_src elisp
   (setq custom-file "~/.emacs.d/custom.el")
   (load custom-file)
 #+end_src
 
-some useful minor modes
+Some useful minor modes
 #+begin_src elisp
   (global-display-line-numbers-mode) ;; line numbers
   (global-subword-mode) ;; iterate through camelCase
@@ -56,7 +56,7 @@ some useful minor modes
   (recentf-mode) ;; recent files
 #+end_src
 
-configure indentation
+Configure indentation
 #+begin_src elisp
   (setq-default indent-tabs-mode nil
       tab-width 2)
@@ -65,7 +65,7 @@ configure indentation
 
 * Packages
 
-setting up use-package
+Setting up use-package
 #+begin_src elisp
   ;; init package sources
   (require 'package)
@@ -112,7 +112,7 @@ setting up use-package
     (setq vertico-cycle t))
 #+end_src
 
-orderless adds fuzzy finding
+Orderless adds fuzzy finding
 #+begin_src elisp
   (use-package orderless
     :init
@@ -121,7 +121,7 @@ orderless adds fuzzy finding
           completion-category-overrides '((file (styles partial-completion)))))
 #+end_src
 
-marginalia adds descriptions and stuff to your minibuffer
+Marginalia adds descriptions and stuff to your minibuffer
 #+begin_src elisp
   (use-package marginalia
     :init (marginalia-mode))
@@ -163,7 +163,7 @@ eshell is nice but I prefer vterm
 #+end_src
 
 ** Languages
-some major modes to improve language support
+Some major modes to improve language support
 #+begin_src elisp
   (use-package nix-mode)
   (use-package lua-mode)
@@ -194,7 +194,115 @@ some major modes to improve language support
   (use-package magit)
 #+end_src
 
+* Builtins
+
+** Ibuffer
+#+begin_src elisp
+    (global-set-key (kbd "C-x C-b") 'ibuffer)
+    (with-eval-after-load 'ibuffer
+      (setq ibuffer-expert t
+        ibuffer-show-empty-filter-groups nil)
+      (defun my/human-readable-file-sizes-to-bytes (string)
+        "Convert a human-readable file size into bytes."
+        (interactive)
+        (cond
+          ((string-suffix-p "G" string t)
+            (* 1000000000 (string-to-number (substring string 0 (- (length string) 1)))))
+          ((string-suffix-p "M" string t)
+            (* 1000000 (string-to-number (substring string 0 (- (length string) 1)))))
+          ((string-suffix-p "K" string t)
+            (* 1000 (string-to-number (substring string 0 (- (length string) 1)))))
+          (t
+            (string-to-number (substring string 0 (- (length string) 1))))))
+
+      (defun my/bytes-to-human-readable-file-sizes (bytes)
+        "Convert number of bytes to human-readable file size."
+        (interactive)
+        (cond
+          ((> bytes 1000000000) (format "%10.1fG" (/ bytes 1000000000.0)))
+          ((> bytes 100000000) (format "%10.0fM" (/ bytes 1000000.0)))
+          ((> bytes 1000000) (format "%10.1fM" (/ bytes 1000000.0)))
+          ((> bytes 100000) (format "%10.0fk" (/ bytes 1000.0)))
+          ((> bytes 1000) (format "%10.1fk" (/ bytes 1000.0)))
+          (t (format "%10d" bytes))))
+
+      ;; Use human readable Size column instead of original one
+      (define-ibuffer-column size-h
+        (:name "Size"
+          :inline t
+          :summarizer
+          (lambda (column-strings)
+            (let ((total 0))
+              (dolist (string column-strings)
+                (setq total
+                  (+ (float (my/human-readable-file-sizes-to-bytes string))
+                    total)))
+              (my/bytes-to-human-readable-file-sizes total)))
+          )
+        (my/bytes-to-human-readable-file-sizes (buffer-size)))
+#+end_src
+
+Modify the default ibuffer formats
+#+begin_src elisp
+      (setq ibuffer-formats
+        '((mark modified read-only locked " "
+            (name 20 20 :left :elide)
+            " "
+            (size-h 11 -1 :right)
+            " "
+            (mode 16 16 :left :elide))
+           (mark " "
+             (name 16 -1)
+             " " filename))))
+#+end_src
+
+Set filter groups
+#+begin_src elisp
+
+    (setq ibuffer-saved-filter-groups
+    '(("main"
+        ("modified" (and
+                      (modified . t)
+                      (visiting-file . t)))
+        ("term" (or
+                  (mode . vterm-mode)
+                  (mode . eshell-mode)
+                  (mode . term-mode)
+                  (mode . shell-mode)))
+        ("config" (filename . "/dotfiles/"))
+        ("code" (filename . "/projects/"))
+        ("org" (mode . org-mode))
+        ("docs" (or
+                  (mode . pdf-view-mode)
+                  (mode . doc-view-mode)))
+        ("img" (mode . image-mode))
+        ("dired" (mode . dired-mode))
+        ("help" (or (name . "\*Help\*")
+                  (name . "\*Apropos\*")
+                  (name . "\*info\*")
+                  (mode . help-mode)))
+        ("internal" (name . "^\*.*$"))
+        ("other" (name . "^.*$"))
+        )))
+  (add-hook 'ibuffer-mode-hook
+    (lambda ()
+      (ibuffer-auto-mode 1)
+      (ibuffer-switch-to-saved-filter-groups "main")))
+#+end_src
+
+Add icons to ibuffer
+#+begin_src elisp
+  (use-package all-the-icons-ibuffer
+    :ensure t
+    :init (all-the-icons-ibuffer-mode 1))
+#+end_src
+
 * UI
+
+** Icons
+#+begin_src elisp
+  (use-package all-the-icons)
+#+end_src
 
 ** Basic Tweaks
 #+begin_src elisp
@@ -216,6 +324,7 @@ some major modes to improve language support
     (mood-line-mode))
 #+end_src
 
+
 ** Smooth scrolling
 #+begin_src elisp
   (use-package good-scroll
@@ -232,7 +341,7 @@ some major modes to improve language support
     (org-mode . (lambda () (org-bullets-mode 1))))
 #+end_src
 
-make org-mode prettier
+Make org-mode prettier
 #+begin_src elisp
   (defun org/prettify-set ()
     (interactive)
@@ -272,7 +381,7 @@ make org-mode prettier
   (global-prettify-symbols-mode)
 #+end_src
 
-set up org-babel for elisp
+Set up org-babel for elisp
 #+begin_src elisp
   (org-babel-do-load-languages
     'org-babel-load-languages
