--- a/config/emacs/config.org
+++ b/config/emacs/config.org
@@ -99,6 +99,39 @@ Setting up use-package
   (evil-collection-init))
 #+end_src
 
+** Leader
+#+begin_src elisp
+  (use-package evil-leader
+    :config
+    (global-evil-leader-mode)
+    (evil-leader/set-leader "<SPC>")
+    (evil-leader/set-key
+      ;; General
+      ".f" 'consult-isearch
+      ".q" 'delete-frame
+      ".e" 'eval-region
+      ".s" 'straight-use-package
+      ;; Files
+      "fr" 'consult-recent-file
+      "fb" 'consult-bookmark
+      "ff" 'find-file
+      "fd" 'dired
+      ;; Bufffers
+      "bv" 'split-window-right
+      "bh" 'split-window-below
+      "bd" 'kill-current-buffer
+      "bb" 'consult-buffer
+      "bx" 'switch-to-scratch
+      "bi" 'ibuffer
+      ;; Help
+      "hh" 'help
+      "hk" 'describe-key
+      "hv" 'describe-variable
+      "hf" 'describe-function
+      "hs" 'describe-symbol
+      "hm" 'describe-mode))
+#+end_src
+
 ** Consult
 #+begin_src elisp
   (use-package consult)
