emacs: tweak evil settings

--- a/config/emacs/config.org
+++ b/config/emacs/config.org
@@ -97,6 +97,12 @@ Setting up use-package
   :after evil
   :config
   (evil-collection-init))
+
+  (setq evil-cross-lines t
+      evil-move-beyond-eol t
+      evil-symbol-word-search t
+      evil-want-Y-yank-to-eol t
+      evil-cross-lines t)
 #+end_src
 
 ** Leader
