--- a/config/emacs/config.org
+++ b/config/emacs/config.org
@@ -64,6 +64,7 @@ Some useful minor modes
 #+begin_src elisp
   (global-display-line-numbers-mode) ;; line numbers
   (global-hl-line-mode) ;; highlight current line
+  (global-visual-line-mode) ;; wrap lines
   (electric-pair-mode) ;; autopairs
   (recentf-mode) ;; recent files
 #+end_src
@@ -235,7 +236,10 @@ eshell is nice but I prefer vterm
 #+begin_src elisp
   (use-package mixed-pitch
     :hook
-    (text-mode . mixed-pitch-mode))
+    (text-mode . mixed-pitch-mode)
+    :config
+    (setq mixed-pitch-variable-pitch-cursor "block"
+          mixed-pitch-set-height t))
 #+end_src
 
 ** Languages
@@ -252,11 +256,11 @@ Some major modes to improve language support
     :ensure t
     :init (global-flycheck-mode)
     :config
-    (setq flycheck-emacs-lisp-load-path 'inherit)
+    (setq flycheck-elisp-load-path 'inherit)
     (setq flycheck-idle-change-delay 1.0)
-    (setq-local flycheck-emacs-lisp-initialize-packages t)
-    (setq-local flycheck-emacs-lisp-package-user-dir package-user-dir)
-    (setq-default flycheck-disabled-checkers '(emacs-lisp-checkdoc)))
+    (setq-local flycheck-elisp-initialize-packages t)
+    (setq-local flycheck-elisp-package-user-dir package-user-dir)
+    (setq-default flycheck-disabled-checkers '(elisp-checkdoc)))
 #+end_src
 
 ** Projectile
@@ -485,6 +489,8 @@ Add icons to ibuffer
             (lambda ()
               (local-set-key (kbd "q") 'org-agenda-exit)))
   (use-package htmlize)
+  (add-hook 'org-mode-hook #'toggle-word-wrap)
+
 #+end_src
 
 ** Deft
@@ -505,24 +511,46 @@ Deft is nice for note-taking
 #+end_src
 
 ** Publishing
+
 #+begin_src elisp
+
+    (defun sitemap-format-entry (entry style project)
+    (format "
+        [[file:%s][%s]]
+        ,#+begin_article-info
+        ,#+begin_date
+        Last Modified %s
+        ,#+end_date
+        ,#+end_article-info"
+        entry
+                (org-publish-find-title entry project)
+        (format-time-string "%Y-%m-%d" (org-publish-find-date entry project))
+        (org-publish-find-property entry :keywords project 'html)
+        (org-publish-find-property entry :description project 'html)))
   (setq org-publish-project-alist
         '(
           ("blog"
-           :base-directory "~/projects/site/org"
-           :base-extension "org" "png" "jpg" "css"
+           :base-directory "~/projects/site/org/"
+           :base-extension "org"
            :publishing-directory "~/projects/site/blog/"
            :recursive t
            :publishing-function org-html-publish-to-html
-           :auto-preamble t)
+           :html-preamble "<div class=\"links\"><a href=../index.html>Home</a><a href=\"\" class=\"active\">Blog</a><a href=../about.html>About</a></div>"
+           :html-head "<link rel=\"stylesheet\" type=\"text/css\" href=\"../css/style.css\" />"
+           :auto-sitemap t
+           :sitemap-filename "index.org"
+           :sitemap-title "Recent"
+           :sitemap-format-entry sitemap-format-entry
+           :sitemap-sort-files anti-chronologically)
           ("emacs-config"
            :base-directory "~/dotfiles/config/emacs/"
-           :base-extension "org" "css" "png"
+           :base-extension "org"
            :publishing-directory "~/projects/site/blog/"
            :recursive nil
-           :publishing-function org-html-publish-to-html
-           :auto-preamble t)))
+           :publishing-function org-html-publish-to-html)))
+
   (setq org-html-postamble nil)
+  (setq org-export-preserve-breaks t)
 #+end_src
 
 Make org-mode prettier
@@ -566,7 +594,7 @@ Set up org-babel for elisp
 #+begin_src elisp
   (org-babel-do-load-languages
     'org-babel-load-languages
-    '((emacs-lisp . t)))
+    '((elisp . t)))
 #+end_src
 
 * Literate config
