--- a/config/emacs/config.org
+++ b/config/emacs/config.org
@@ -10,6 +10,7 @@
 
   (add-to-list 'load-path (expand-file-name "./lisp" user-emacs-directory))
 #+end_src
+
 * Basic stuff
 
 ** Identity
@@ -105,6 +106,7 @@ Setting up use-package
     :init
     (gcmh-mode 1))
 #+end_src
+
 ** Evil
 #+begin_src elisp
   (use-package evil
@@ -185,9 +187,7 @@ Orderless adds fuzzy finding
 #+begin_src elisp
   (use-package orderless
     :init
-    (setq completion-styles '(orderless)
-          completion-category-defaults nil
-          completion-category-overrides '((file (styles partial-completion)))))
+    (setq completion-styles '(orderless)))
 #+end_src
 
 Marginalia adds descriptions and stuff to your minibuffer
@@ -274,6 +274,12 @@ Some major modes to improve language support
 #+begin_src elisp
   (use-package magit
     :defer t)
+#+end_src
+
+** Rainbow-mode
+Visualize color values.
+#+begin_src elisp
+  (use-package rainbow-mode)
 #+end_src
 
 * Builtins
@@ -373,11 +379,11 @@ Set filter groups
                     (mode . shell-mode)))
            ("planning" (or
                         (name . "^\\*Calendar\\*$")
-                        (name . "^diary$")
+                        (name . "^agenda")
                         (mode . org-agenda-mode)))
            ("img" (mode . image-mode))
            ("config" (filename . "/dotfiles/"))
-           ("site" (filename . "/projects/site/"))
+           ("blog" (filename . "/projects/site/"))
            ("code" (filename . "/projects/"))
            ("notes" ( filename . "/notes/"))
            ("org" (mode . org-mode))
@@ -425,10 +431,28 @@ Add icons to ibuffer
 
 ** Modeline
 #+begin_src elisp
-  (use-package mood-line
-    :ensure t
-    :config
-    (mood-line-mode))
+  (add-to-list 'default-frame-alist '(internal-border-width . 24))
+
+  (defun mode-line-render (left right)
+    "Return a string of `window-width' length.
+     Containing LEFT, and RIGHT aligned respectively."
+    (let ((available-width
+            (- (window-width)
+              (+ (length (format-mode-line left))
+                 (length (format-mode-line right))))))
+      (append left
+              (list (format (format "%%%ds" available-width) ""))
+        right)))
+
+  (setq-default mode-line-format
+    '((:eval (mode-line-render
+               '("  %b"
+                 (:eval (if (and buffer-file-name (buffer-modified-p))
+                            (propertize "*" 'face `(:inherit face-faded))))
+                 (:eval (if (buffer-narrowed-p)
+                           (propertize "-" 'face `(:inherit face-faded)))))
+               '("%p %l:%c "
+                  (:eval (propertize " %m " 'face 'font-lock-string-face)))))))
 #+end_src
 
 ** Splash
@@ -480,9 +504,7 @@ Add icons to ibuffer
     :hook
     (org-mode . (lambda () (org-bullets-mode 1))))
 
-  (setq org-src-window-setup 'split-window-below
-        org-agenda-window-setup 'split-window-below)
-
+  (setq org-bullets-bullet-list '("◉" "○" "●" "○" "●" "○" "●"))
   (setq org-agenda-files '("~/org/agenda.org"))
 
   (add-hook 'org-agenda-mode-hook
