--- a/config/emacs/config.org
+++ b/config/emacs/config.org
@@ -254,13 +254,15 @@ Some major modes to improve language support
 #+begin_src elisp
   (use-package flycheck
     :ensure t
-    :init (global-flycheck-mode)
+    :defer t
     :config
     (setq flycheck-elisp-load-path 'inherit)
     (setq flycheck-idle-change-delay 1.0)
     (setq-local flycheck-elisp-initialize-packages t)
     (setq-local flycheck-elisp-package-user-dir package-user-dir)
     (setq-default flycheck-disabled-checkers '(elisp-checkdoc)))
+
+    (add-hook 'prog-mode-hook 'global-flycheck-mode)
 #+end_src
 
 ** Projectile
@@ -301,7 +303,7 @@ Visualize color values.
 
   (use-package all-the-icons-dired)
   (add-hook 'dired-mode-hook 'all-the-icons-dired-mode)
-  (setq all-the-icons-dired-monochrome 'nil)
+  (setq all-the-icons-dired-monochrome 't)
 #+end_src
 
 ** Ibuffer
@@ -412,8 +414,8 @@ Add icons to ibuffer
 
 ** Font
 #+begin_src elisp
-  (set-face-attribute 'default nil :font "Cascadia Code 10")
-  (set-face-attribute 'fixed-pitch nil :font "Cascadia Code 10")
+  (set-face-attribute 'default nil :font "Cartograph CF 10")
+  (set-face-attribute 'fixed-pitch nil :font "Cartograph CF 10")
   (set-face-attribute 'variable-pitch nil :font "IBM Plex Sans 10")
 #+end_src
 
@@ -446,7 +448,7 @@ Add icons to ibuffer
 
   (setq-default mode-line-format
     '((:eval (mode-line-render
-               '("  %b"
+               '((:eval (propertize " %b" 'face `(:slant italic)))
                  (:eval (if (and buffer-file-name (buffer-modified-p))
                             (propertize "*" 'face `(:inherit face-faded))))
                  (:eval (if (buffer-narrowed-p)
@@ -537,18 +539,28 @@ Deft is nice for note-taking
 ** Publishing
 
 #+begin_src elisp
+  (defun org-publish-get-date-from-property (file project)
+    "Get date keyword from FILE in PROJECT and parse it to internal format."
+       (let ((date (org-publish-find-property file :date project)))
+         (cond ((let ((ts (and (consp date) (assq 'timestamp date))))
+            (and ts
+           (let ((value (org-element-interpret-data ts)))
+             (and (org-string-nw-p value)
+            (org-time-string-to-time value))))))
+         (t (error "No timestamp in file \"%s\"" file)))))
 
   (defun sitemap-format-entry (entry style project)
     (format "
                 [[file:%s][%s]]
                 ,#+begin_article-info
                 ,#+begin_date
-                Last Modified %s
+                Published %s
                 ,#+end_date
                 ,#+end_article-info"
             entry
             (org-publish-find-title entry project)
-            (format-time-string "%Y-%m-%d" (org-publish-find-date entry project))
+            (format-time-string "%b %d, %Y"
+                                  (org-publish-get-date-from-property entry project))
             (org-publish-find-property entry :keywords project 'html)
             (org-publish-find-property entry :description project 'html)))
 
@@ -562,6 +574,7 @@ Deft is nice for note-taking
            :publishing-function org-html-publish-to-html
            :html-preamble "<div class=\"links\"><a href=\"../index.html\">Home</a><a href=\"\" class=\"active\">Blog</a><a href=\"../about.html\">About</a></div>"
            :html-head "<link rel=\"stylesheet\" type=\"text/css\" href=\"../css/style.css\" />"
+           :html-head-include-scripts nil
            :auto-sitemap t
            :sitemap-filename "index.org"
            :sitemap-title "Recent"
@@ -579,14 +592,15 @@ Deft is nice for note-taking
 #+end_src
 
 Make org-mode prettier
+
 #+begin_src elisp
     (defun org/prettify-set ()
       (interactive)
       (setq prettify-symbols-alist
-            '(("#+begin_src" . "")
-              ("#+BEGIN_SRC" . "")
-              ("#+end_src" . "")
-              ("#+END_SRC" . "")
+            '(("#+begin_src" . ">")
+              ("#+BEGIN_SRC" . ">")
+              ("#+end_src" . "<")
+              ("#+END_SRC" . "<")
               ("#+begin_example" . "")
               ("#+BEGIN_EXAMPLE" . "")
               ("#+end_example" . "")
@@ -613,25 +627,6 @@ Make org-mode prettier
     (add-hook 'prog-mode-hook 'prog/prettify-set)
 
     (global-prettify-symbols-mode)
-#+end_src
-
-Set up org-babel for elisp
-#+begin_src elisp
-  (org-babel-do-load-languages
-    'org-babel-load-languages
-    '((elisp . t)))
-#+end_src
-
-* Literate config
-#+begin_src elisp
-  (defun org-babel-tangle-config ()
-    (when (string-equal (buffer-file-name)
-                        (expand-file-name "~/dotfiles/config/emacs/config.org"))
-      (let ((org-confirm-babel-evaluate nil))
-        (org-babel-tangle))))
-
-  ;; tangle on save
-  (add-hook 'org-mode-hook (lambda () (add-hook 'after-save-hook #'org-babel-tangle-config)))
 #+end_src
 
 the end
